Fix some small bugs and make buttons added to previous patient scene use the stylesheet

--- a/TBI-GUI/src/resources/darkTheme.css
+++ b/TBI-GUI/src/resources/darkTheme.css
@@ -5,6 +5,27 @@
     -fx-background-color: #cfd8dc;
 }
 
+.button {
+	-fx-background-color: #f1fafe;
+	-fx-background-radius: 5;
+	-fx-background-insets: 0,1,2;
+	-fx-text-fill: black;
+}
+
+.button:hover {
+	-fx-background-color: #c1cace;
+	-fx-background-radius: 5;
+	-fx-background-insets: 0,1,2; 
+	-fx-text-fill: black;
+}
+
+.button:pressed {
+	-fx-background-color: #919a9e;
+	-fx-background-radius: 5;
+	-fx-background-insets: 0,1,2;
+	-fx-text-fill: black;
+}
+
 .vbox-dialog-box{
 	-fx-background-color: cfd8dc;
 }
