Swithed remaining classes to use stylesheet and deleted Style class

--- a/TBI-GUI/src/resources/darkTheme.css
+++ b/TBI-GUI/src/resources/darkTheme.css
@@ -43,6 +43,10 @@
 	-fx-background-color: #455357;
 }
 
+.scroll-pane {
+	-fx-background-color: transparent;
+}
+
 .text-area-sidebar .content {
 	-fx-background-color: #455357;
 }
