--- a/TBI-GUI/src/resources/themes/darkTheme.css
+++ b/TBI-GUI/src/resources/themes/darkTheme.css
@@ -60,12 +60,12 @@
 	-fx-background-color: #c1cace;
 }
 
-.scroll-pane {
+.scroll-pane-side {
 	-fx-border-color: #455357;
 	-fx-background-color: #455357;
 }
 
-.scroll-pane .viewport {
+.scroll-pane-side .viewport {
 	-fx-border-color: #455357;
 	-fx-background-color: #455357;
 }
@@ -132,5 +132,46 @@
 }
 
 .titled-pane .content {
+	-fx-background-color: #455357;
+}
+
+.color-picker {
+	-fx-background-color: #f1fafe;
+	-fx-background-radius: 5;
+	-fx-background-insets: 0,1,2;
+	-fx-text-fill: black;
+}
+
+.color-picker:hover {
+	-fx-background-color: #c1cace;
+	-fx-background-radius: 5;
+	-fx-background-insets: 0,1,2;
+	-fx-text-fill: black;
+}
+
+.color-picker:pressed {
+	-fx-background-color: #919a9e;
+	-fx-background-radius: 5;
+	-fx-background-insets: 0,1,2;
+	-fx-text-fill: black;
+}
+
+.scroll-pane .corner {
+	-fx-background-color: transparent;
+}
+
+.scroll-bar {
+	-fx-background-color: transparent;
+}
+
+.scroll-bar:vertical .thumb, .scroll-bar:horizontal .thumb {
+	-fx-background-color: #455357;
+}
+
+.scroll-bar:vertical .increment-button, .scroll-bar:vertical .decrement-button, .scroll-bar:horizontal .increment-button, .scroll-bar:horizontal .decrement-button {
+	-fx-background-color: transparent;
+}
+
+.scroll-bar:horizontal .increment-arrow, .scroll-bar:vertical .increment-arrow, .scroll-bar:horizontal .decrement-arrow, .scroll-bar:vertical .decrement-arrow {
 	-fx-background-color: #455357;
 }
